src/objects/caesars_lms_folio_hdr_temp__x.object
<CustomObject>
    <description>caesars$lms_folio_hdr_temp</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>caesars$lms_folio_hdr_temp</externalName>
    <fields>
        <fullName>c_bill_cd__c</fullName>
        <description>c_bill_cd</description>
        <externalDeveloperName>c_bill_cd</externalDeveloperName>
        <label>c_bill_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_dept__c</fullName>
        <description>c_compor_dept</description>
        <externalDeveloperName>c_compor_dept</externalDeveloperName>
        <label>c_compor_dept</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_first_name__c</fullName>
        <description>c_compor_first_name</description>
        <externalDeveloperName>c_compor_first_name</externalDeveloperName>
        <label>c_compor_first_name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_gl_cd__c</fullName>
        <description>c_compor_gl_cd</description>
        <externalDeveloperName>c_compor_gl_cd</externalDeveloperName>
        <label>c_compor_gl_cd</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_last_name__c</fullName>
        <description>c_compor_last_name</description>
        <externalDeveloperName>c_compor_last_name</externalDeveloperName>
        <label>c_compor_last_name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_convention_cd__c</fullName>
        <description>c_convention_cd</description>
        <externalDeveloperName>c_convention_cd</externalDeveloperName>
        <label>c_convention_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_folio_creator_id__c</fullName>
        <description>c_folio_creator_id</description>
        <externalDeveloperName>c_folio_creator_id</externalDeveloperName>
        <label>c_folio_creator_id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>c_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_folio_create_timestamp__c</fullName>
        <description>d_folio_create_timestamp</description>
        <externalDeveloperName>d_folio_create_timestamp</externalDeveloperName>
        <label>d_folio_create_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>d_folio_effective_dt__c</fullName>
        <description>d_folio_effective_dt</description>
        <externalDeveloperName>d_folio_effective_dt</externalDeveloperName>
        <label>d_folio_effective_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_folio_expire_dt__c</fullName>
        <description>d_folio_expire_dt</description>
        <externalDeveloperName>d_folio_expire_dt</externalDeveloperName>
        <label>d_folio_expire_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>f_folio_id__c</fullName>
        <description>f_folio_id</description>
        <externalDeveloperName>f_folio_id</externalDeveloperName>
        <label>f_folio_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_reserve_id__c</fullName>
        <description>f_reserve_id</description>
        <externalDeveloperName>f_reserve_id</externalDeveloperName>
        <label>f_reserve_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_folio_type_id__c</fullName>
        <description>i_folio_type_id</description>
        <externalDeveloperName>i_folio_type_id</externalDeveloperName>
        <label>i_folio_type_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lms_hotel_activity_fk__c</fullName>
        <description>lms_hotel_activity_fk</description>
        <externalDeveloperName>lms_hotel_activity_fk</externalDeveloperName>
        <label>lms_hotel_activity_fk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$lms_folio_hdr_temp</label>
    <pluralLabel>caesars$lms_folio_hdr_temp</pluralLabel>
</CustomObject>